Add data privacy with automatic fallback

--- a/.gitignore
+++ b/.gitignore
@@ -41,8 +41,9 @@ yarn-error.log*
 next-env.d.ts
 
 # data files - keep your content private
-# Note: data.ts.example is tracked, but data.ts is ignored
+# Note: data.example.ts is tracked, but data.ts is ignored
 /app/lib/data.ts
+!/app/lib/data.example.ts
 /public/audio/
 /public/images/
 /public/videos/
