--- a/.gitignore
+++ b/.gitignore
@@ -44,16 +44,15 @@ next-env.d.ts
 # Note: data.example.ts is tracked, but data.ts is ignored
 /app/lib/data.ts
 !/app/lib/data.example.ts
-/public/audio/
-/public/images/
-/public/videos/
+
+# Media files are NOT gitignored - they need to be deployed
+# If you want to keep media files private, use a CDN or external storage instead
+# /public/audio/
+# /public/images/
+# /public/videos/
+
+# Optional: If you want to gitignore specific sensitive media files, uncomment:
+# /public/images/sensitive-*.jpg
+# /public/videos/private-*.mp4
+
 /data/
-# Media file extensions (only in public directories)
-/public/**/*.mp3
-/public/**/*.mp4
-/public/**/*.MP4
-/public/**/*.jpg
-/public/**/*.jpeg
-/public/**/*.png
-/public/**/*.gif
-/public/**/*.webp
